Massive improvements on the structure and usage of the css. Improve the DOM order and structure, fixed overflow issues properly, fix improper content centering upon opening a tab.

--- a/JataakaTeamwork/games/splashscreen/styles/style.css
+++ b/JataakaTeamwork/games/splashscreen/styles/style.css
@@ -14,8 +14,9 @@ body {
   background-attachment: fixed;
   color: #ffffff;
   font-family: 'Times New Roman', Times, serif;
-  overflow: hidden;
   cursor: context-menu;
+  height: 100%;
+  width: 100%;
 }
 body #start-screen-wrapper {
   position: absolute;
@@ -34,9 +35,10 @@ body #start-screen-wrapper small {
 body #menu-wrapper {
   display: none;
   color: #ffffff;
-  padding: 15px;
   background: none;
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 body #menu-wrapper #bckgrnd {
   position: fixed;
@@ -80,6 +82,8 @@ body #menu-wrapper .menu-button:hover {
 body #menu-wrapper #controls-wrapper {
   margin: 0 auto;
   width: 385px;
+  z-index: 10;
+  position: relative;
 }
 body #menu-wrapper #controls-wrapper #soundToggle {
   width: 25px;
@@ -90,6 +94,7 @@ body #menu-wrapper #controls-wrapper #soundToggle {
 body #menu-wrapper #controls-wrapper ul {
   list-style-type: none;
   display: inline-block;
+  margin-top: 15px;
 }
 body #menu-wrapper #controls-wrapper ul li {
   display: inline-block;
@@ -106,17 +111,52 @@ body #menu-wrapper #controls-wrapper ul li:hover > .menu-button {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@col1', endColorstr='@col1', GradientType=0);
   color: #0ff;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content {
+body #menu-wrapper .li-item-content {
   display: none;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  top: 50px;
+  top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  padding: 25px 0;
+  z-index: 0;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content img {
+body #menu-wrapper .li-item-content #how-to-play-wrapper {
+  margin: 0 auto;
+  width: 80%;
+}
+body #menu-wrapper .li-item-content #how-to-play-wrapper table {
+  border: 2px outset #808080;
+  border-width: 4px;
+  width: 100%;
+  width: 450px;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #007aef;
+  position: absolute;
+}
+body #menu-wrapper .li-item-content #how-to-play-wrapper table tr:first-of-type {
+  outline: 2px outset #aaa;
+  margin-bottom: 5px;
+}
+body #menu-wrapper .li-item-content #how-to-play-wrapper table tr:nth-of-type(2) td {
+  padding-top: 8px;
+}
+body #menu-wrapper .li-item-content #how-to-play-wrapper table th {
+  text-align: center;
+  color: #b3ded8;
+}
+body #menu-wrapper .li-item-content #how-to-play-wrapper table td {
+  width: 49.5%;
+  margin: 0 auto;
+  text-align: center;
+  border-collapse: collapse;
+}
+body #menu-wrapper .li-item-content #authors-wrapper {
+  width: 800px;
+  position: absolute;
+}
+body #menu-wrapper .li-item-content #authors-wrapper img {
   width: 100px;
   height: 100px;
   display: block;
@@ -124,56 +164,17 @@ body #menu-wrapper #controls-wrapper ul li .li-item-content img {
   border-radius: 20%;
   border: 2px outset #888;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content #how-to-play-wrapper {
-  margin: 0 auto;
-  width: 80%;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #how-to-play-wrapper table {
-  border: 2px outset #808080;
-  border-width: 4px;
-  width: 100%;
-  width: 450px;
-  /*margin: 0 auto;
-                                margin-top: 90px;*/
-  padding: 10px 20px;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #007aef;
-  position: absolute;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #how-to-play-wrapper table tr:first-of-type {
-  outline: 2px outset #aaa;
-  margin-bottom: 5px;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #how-to-play-wrapper table tr:nth-of-type(2) td {
-  padding-top: 8px;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #how-to-play-wrapper table th {
-  text-align: center;
-  color: #b3ded8;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #how-to-play-wrapper table td {
-  width: 49.5%;
-  margin: 0 auto;
-  text-align: center;
-  border-collapse: collapse;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper {
-  width: 800px;
-  margin: 65px auto;
-  height: 70%;
-  overflow: auto;
-}
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .col {
+body #menu-wrapper .li-item-content #authors-wrapper .col {
   display: inline-block;
   margin: auto;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .col:first-of-type {
+body #menu-wrapper .li-item-content #authors-wrapper .col:first-of-type {
   float: left;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .col:last-of-type {
+body #menu-wrapper .li-item-content #authors-wrapper .col:last-of-type {
   float: right;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .dt {
+body #menu-wrapper .li-item-content #authors-wrapper .dt {
   display: inline-block;
   text-align: center;
   border: 2px outset #808080;
@@ -184,11 +185,11 @@ body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .dt
   height: 130px;
   margin-bottom: 5px;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .dt span {
+body #menu-wrapper .li-item-content #authors-wrapper .dt span {
   display: block;
   margin-top: 5px;
 }
-body #menu-wrapper #controls-wrapper ul li .li-item-content #authors-wrapper .dd {
+body #menu-wrapper .li-item-content #authors-wrapper .dd {
   display: table-cell;
   float: right;
   border: 2px outset #808080;
